deployments/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticketing-app
  labels:
    name: ticketing-app
